# BSBcontrol

./: .gitignore  ARCHITECTURE.md  README.md  boot.py  main.py  modbus.py  pyproject.toml  restserver.py  run_local.py  thermostat.py
.github/: copilot-instructions.md
bsb/: bsb.py  controller.py  fields.py  protocol.py
tests/: conftest.py  test_bsb_fields.py  test_bsb_get_field.py  test_bsb_protocol.py  test_thermostat.py
tools/conf_lan2control/: BSBLanDefsToDeviceJson.py
